# qualetize_gui

./: .gitmodules  Cargo.toml  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  about.toml  build.rs
.github/workflows/: ci.yml  release.yml  test-release.yml
assets/: icon.icns
examples/: genesis.qset
src/: app.rs  color_correction.rs  color_processor.rs  exporter.rs  image_processing.rs  image_processor.rs  main.rs  types.rs  ui.rs
src/settings_manager/: mod.rs
src/types/: app_state.rs  color_correction.rs  color_management.rs  color_space.rs  dither.rs  export.rs  image.rs  mod.rs  preferences.rs  qualetize.rs  settings.rs
src/ui/: colors.rs  footer.rs  header.rs  image_viewer.rs  mod.rs  settings_panel.rs  styles.rs
