[package]
name = "qualetize_gui"
version = "0.2.2"
edition = "2024"
build = "build.rs"

[[bin]]
name = "QualetizeGUI"
path = "src/main.rs"
windows_subsystem = "windows"

[package.metadata.bundle]
name = "QualetizeGUI"
identifier = "io.github.ulalume.qualetize_gui"
icon = ["assets/icon.icns"]

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
image = "0.25"
rfd = "0.15.4"
env_logger = "0.11.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
png = "0.17"

[build-dependencies]
cc = "*"
embed-resource = "2.5"

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
