[package]
name = "qualetize_gui"
version = "0.3.4"
edition = "2024"
build = "build.rs"

[[bin]]
name = "QualetizeGUI"
path = "src/main.rs"

[package.metadata.bundle]
name = "QualetizeGUI"
identifier = "io.github.ulalume.qualetize_gui"
icon = ["assets/icon.icns"]

[dependencies]
eframe = "0.32"
egui = "0.32"
image = "0.25"
rfd = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
png = "0.18"
regex = "1.11"
moxcms = "0.7.5"
display_icc = { git = "https://github.com/ulalume/display_icc" }

[build-dependencies]
cc = "*"

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
